[gd_scene load_steps=9 format=3 uid="uid://ctt0kmimgrmcq"]

[ext_resource type="Script" uid="uid://dni63icxyaktk" path="res://assets/Zombie Apocalypse Tileset/main.gd" id="1_0tmj4"]
[ext_resource type="PackedScene" uid="uid://4wt2quc013cs" path="res://assets/Zombie Apocalypse Tileset/world.tscn" id="1_fn61g"]
[ext_resource type="PackedScene" uid="uid://csuhiepm2s7gf" path="res://assets/Zombie Apocalypse Tileset/player.tscn" id="2_wbu5n"]
[ext_resource type="PackedScene" uid="uid://bddq2aeltdtos" path="res://assets/Zombie Apocalypse Tileset/enemyspawner.tscn" id="4_0tmj4"]
[ext_resource type="Script" uid="uid://b0eeai4bfjc6o" path="res://assets/Zombie Apocalypse Tileset/bulletmanager.gd" id="4_mmv4p"]
[ext_resource type="PackedScene" uid="uid://de0noq228teo7" path="res://assets/Zombie Apocalypse Tileset/bullet.tscn" id="5_um7dp"]
[ext_resource type="PackedScene" uid="uid://n2ky8rjdjogy" path="res://assets/Zombie Apocalypse Tileset/game_over.tscn" id="8_fcu5y"]
[ext_resource type="PackedScene" uid="uid://ftf3h2wjtj52" path="res://assets/Zombie Apocalypse Tileset/hud.tscn" id="8_um7dp"]

[node name="Main" type="Node"]
script = ExtResource("1_0tmj4")

[node name="world" parent="." instance=ExtResource("1_fn61g")]

[node name="player" parent="." instance=ExtResource("2_wbu5n")]
position = Vector2(387, 410)

[node name="bulletmanager" type="Node2D" parent="."]
script = ExtResource("4_mmv4p")
bullet_scene = ExtResource("5_um7dp")

[node name="enemyspawner" parent="." instance=ExtResource("4_0tmj4")]
position = Vector2(-3, 3)

[node name="WaveOverTimer" type="Timer" parent="."]
process_mode = 2
one_shot = true

[node name="RestartTimer" type="Timer" parent="."]
process_mode = 2
one_shot = true

[node name="Hud" parent="." instance=ExtResource("8_um7dp")]
offset = Vector2(0, 815)
transform = Transform2D(1, 0, 0, 1, 0, 815)

[node name="GameOver" parent="." instance=ExtResource("8_fcu5y")]
process_mode = 2

[connection signal="shoot" from="player" to="bulletmanager" method="_on_player_shoot"]
[connection signal="hit_p" from="enemyspawner" to="." method="_on_enemyspawner_hit_p"]
[connection signal="timeout" from="WaveOverTimer" to="." method="_on_wave_over_timer_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
